# backend/src/database/entities/index.ts
@@ -1,6 +1,7 @@
 import { CaseEntity } from './case.entity';
 import { CaseMemberEntity } from './case-member.entity';
 import { ConversationEntity } from './conversation.entity';
+import { DataRoomConnectionEntity } from './data-room-connection.entity';
 import { InvestigationEntity } from './investigation.entity';
 import { LabeledEntityEntity } from './labeled-entity.entity';
 import { MessageEntity } from './message.entity';
@@ -13,6 +14,7 @@ export const entities = [
   CaseEntity,
   CaseMemberEntity,
   ConversationEntity,
+  DataRoomConnectionEntity,
   InvestigationEntity,
   LabeledEntityEntity,
   MessageEntity,
